--- a/FSF/libjava/libltdl/Makefile.am
+++ b/FSF/libjava/libltdl/Makefile.am
@@ -13,8 +13,12 @@ if CONVENIENCE_LTDL
 noinst_LTLIBRARIES = libltdlc.la
 endif
 
+## Make sure these will be cleaned even when they're not built by
+## default.
+CLEANFILES = libltdl.la libltdlc.la
+
 libltdl_la_SOURCES = ltdl.c
-libltdl_la_LDFLAGS = -no-undefined -version-info 2:0:2
+libltdl_la_LDFLAGS = -no-undefined -version-info 4:0:1
 libltdl_la_LIBADD = $(LIBADD_DL)
 
 libltdlc_la_SOURCES = ltdl.c
@@ -23,7 +27,7 @@ libltdlc_la_LIBADD = $(LIBADD_DL)
 ## Because we do not have automatic dependency tracking:
 ltdl.lo: ltdl.h config.h
 
-$(OBJECTS): libtool
+$(libltdl_la_OBJECTS) $(libltdlc_la_OBJECTS): libtool
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
 
