--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -1459,7 +1459,16 @@ javax/naming/ldap/UnsolicitedNotificationListener.java \
 javax/naming/OperationNotSupportedException.java \
 javax/print/attribute/Attribute.java \
 javax/print/attribute/AttributeSet.java \
+javax/print/attribute/DateTimeSyntax.java \
+javax/print/attribute/DocAttribute.java \
+javax/print/attribute/DocAttributeSet.java \
+javax/print/attribute/IntegerSyntax.java \
 javax/print/attribute/PrintRequestAttributeSet.java \
+javax/print/attribute/ResolutionSyntax.java \
+javax/print/attribute/Size2DSyntax.java \
+javax/print/attribute/TextSyntax.java \
+javax/print/attribute/UnmodifiableSetException.java \
+javax/print/attribute/URISyntax.java \
 javax/security/auth/x500/X500Principal.java \
 javax/sql/ConnectionEvent.java \
 javax/sql/ConnectionEventListener.java \
@@ -4051,7 +4060,16 @@ DEP_FILES =  .deps/$(srcdir)/$(CONVERT_DIR)/gen-from-JIS.P \
 .deps/javax/naming/spi/Resolver.P .deps/javax/naming/spi/StateFactory.P \
 .deps/javax/print/attribute/Attribute.P \
 .deps/javax/print/attribute/AttributeSet.P \
+.deps/javax/print/attribute/DateTimeSyntax.P \
+.deps/javax/print/attribute/DocAttribute.P \
+.deps/javax/print/attribute/DocAttributeSet.P \
+.deps/javax/print/attribute/IntegerSyntax.P \
 .deps/javax/print/attribute/PrintRequestAttributeSet.P \
+.deps/javax/print/attribute/ResolutionSyntax.P \
+.deps/javax/print/attribute/Size2DSyntax.P \
+.deps/javax/print/attribute/TextSyntax.P \
+.deps/javax/print/attribute/URISyntax.P \
+.deps/javax/print/attribute/UnmodifiableSetException.P \
 .deps/javax/rmi/BAD_OPERATION.P .deps/javax/rmi/CORBA/ClassDesc.P \
 .deps/javax/rmi/CORBA/ObjectImpl.P \
 .deps/javax/rmi/CORBA/PortableRemoteObjectDelegate.P \
