--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -1463,9 +1463,15 @@ javax/print/attribute/DateTimeSyntax.java \
 javax/print/attribute/DocAttribute.java \
 javax/print/attribute/DocAttributeSet.java \
 javax/print/attribute/IntegerSyntax.java \
+javax/print/attribute/PrintJobAttribute.java \
+javax/print/attribute/PrintJobAttributeSet.java \
+javax/print/attribute/PrintRequestAttribute.java \
 javax/print/attribute/PrintRequestAttributeSet.java \
+javax/print/attribute/PrintServiceAttribute.java \
+javax/print/attribute/PrintServiceAttributeSet.java \
 javax/print/attribute/ResolutionSyntax.java \
 javax/print/attribute/Size2DSyntax.java \
+javax/print/attribute/SupportedValuesAttribute.java \
 javax/print/attribute/TextSyntax.java \
 javax/print/attribute/UnmodifiableSetException.java \
 javax/print/attribute/URISyntax.java \
@@ -4064,9 +4070,15 @@ DEP_FILES =  .deps/$(srcdir)/$(CONVERT_DIR)/gen-from-JIS.P \
 .deps/javax/print/attribute/DocAttribute.P \
 .deps/javax/print/attribute/DocAttributeSet.P \
 .deps/javax/print/attribute/IntegerSyntax.P \
+.deps/javax/print/attribute/PrintJobAttribute.P \
+.deps/javax/print/attribute/PrintJobAttributeSet.P \
+.deps/javax/print/attribute/PrintRequestAttribute.P \
 .deps/javax/print/attribute/PrintRequestAttributeSet.P \
+.deps/javax/print/attribute/PrintServiceAttribute.P \
+.deps/javax/print/attribute/PrintServiceAttributeSet.P \
 .deps/javax/print/attribute/ResolutionSyntax.P \
 .deps/javax/print/attribute/Size2DSyntax.P \
+.deps/javax/print/attribute/SupportedValuesAttribute.P \
 .deps/javax/print/attribute/TextSyntax.P \
 .deps/javax/print/attribute/URISyntax.P \
 .deps/javax/print/attribute/UnmodifiableSetException.P \
