--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -1459,10 +1459,16 @@ javax/naming/ldap/UnsolicitedNotificationListener.java \
 javax/naming/OperationNotSupportedException.java \
 javax/print/attribute/Attribute.java \
 javax/print/attribute/AttributeSet.java \
+javax/print/attribute/AttributeSetUtilities.java \
 javax/print/attribute/DateTimeSyntax.java \
 javax/print/attribute/DocAttribute.java \
 javax/print/attribute/DocAttributeSet.java \
 javax/print/attribute/EnumSyntax.java \
+javax/print/attribute/HashAttributeSet.java \
+javax/print/attribute/HashDocAttributeSet.java \
+javax/print/attribute/HashPrintJobAttributeSet.java \
+javax/print/attribute/HashPrintRequestAttributeSet.java \
+javax/print/attribute/HashPrintServiceAttributeSet.java \
 javax/print/attribute/IntegerSyntax.java \
 javax/print/attribute/PrintJobAttribute.java \
 javax/print/attribute/PrintJobAttributeSet.java \
@@ -4068,10 +4074,16 @@ DEP_FILES =  .deps/$(srcdir)/$(CONVERT_DIR)/gen-from-JIS.P \
 .deps/javax/naming/spi/Resolver.P .deps/javax/naming/spi/StateFactory.P \
 .deps/javax/print/attribute/Attribute.P \
 .deps/javax/print/attribute/AttributeSet.P \
+.deps/javax/print/attribute/AttributeSetUtilities.P \
 .deps/javax/print/attribute/DateTimeSyntax.P \
 .deps/javax/print/attribute/DocAttribute.P \
 .deps/javax/print/attribute/DocAttributeSet.P \
 .deps/javax/print/attribute/EnumSyntax.P \
+.deps/javax/print/attribute/HashAttributeSet.P \
+.deps/javax/print/attribute/HashDocAttributeSet.P \
+.deps/javax/print/attribute/HashPrintJobAttributeSet.P \
+.deps/javax/print/attribute/HashPrintRequestAttributeSet.P \
+.deps/javax/print/attribute/HashPrintServiceAttributeSet.P \
 .deps/javax/print/attribute/IntegerSyntax.P \
 .deps/javax/print/attribute/PrintJobAttribute.P \
 .deps/javax/print/attribute/PrintJobAttributeSet.P \
