Patch from Dan Nicolaescu * rtl.h (dump_rtx_statistics): Declare it. * rtl.c (rtx_alloc_counts, rtx_alloc_sizes, rtvec_alloc_counts, rtx_alloc_sizes): New static vars. (rtx_alloc, rtvec_alloc): Update them. (dump_rtx_statistics): New function. * toplev.c (finalize): Call it. * ggc-page.c (struct globals): Fix comments. Add new member total_allocated_per_order. (ggc_alloc): Keep track of the total allocated memory. (ggc_print_statistics): Clarify message. Print total allocated memory stats. * configure.in (gather-detailed-mem-stats): New flag. * configure: Regenerate. * config.in: Regenerate. * doc/install.texi (Configuration): Document --enable-gather-detailed-mem-stats.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@74930 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config.in
+++ b/gcc/config.in
@@ -250,6 +250,9 @@
 /* Define if valgrind's memcheck.h header is installed. */
 #undef HAVE_MEMCHECK_H
 
+/* Define to enable detailed memory allocation stats gathering. */
+#undef GATHER_STATISTICS
+
 /* Always define this when using the GNU C Library */
 #undef _GNU_SOURCE
 
