--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -471,6 +471,14 @@ esac],
 [coverage_flags=""])
 AC_SUBST(coverage_flags)
 
+AC_ARG_ENABLE(gather-detailed-mem-stats, 
+[  --enable-gather-detailed-mem-stats         enable detailed memory allocation stats gathering], [],
+[enable_gather_detailed_mem_stats=no])
+if test x$enable_gather_detailed_mem_stats = xyes ; then
+  AC_DEFINE(GATHER_STATISTICS, 1,
+        [Define to enable detailed memory allocation stats gathering.])
+fi
+
 # -------------------------------
 # Miscenalleous configure options
 # -------------------------------
