* Makefile.in (OBJS-common): Remove dwarfout.o. 	(dwarfout.o): Remove. 	* common.opt: Remove -gdwarf, -gdwarf+. 	* defaults.h (PREFERRED_DEBUGGING_TYPE): Do not check for 	DWARF_DEBUGGING_INFO. 	* dwarf2out.c: Fix typo in comment. 	* dwarfout.c: Remove. 	* opts.c (common_handle_option): Remove OPT_gdwarf, OPT_gdwarf_. 	* toplev.c (process_options): Remove check for 	DWARF_DEBUGGING_INFO. 	* config/elfos.h (DWARF_DEBUGGING_INFO): Do not #define it or 	#undef it. 	* config/netware.h (DWARF_DEBUGGING_INFO): Likewise. 	* config/ptx4.h (DWARF_DEBUGGING_INFO): Likewise. 	* config/vxworks.h (DWARF_DEBUGGING_INFO): Likewise. 	* config/alpha/unicosmk.h (DWARF_DEBUGGING_INFO): Likewise. 	* config/arc/arc.h (DWARF_DEBUGGING_INFO): Likewise. 	* config/i386/sco5.h (DWARF_DEBUGGING_INFO): Likewise. 	* config/i386/x86-64.h (DWARF_DEBUGGING_INFO): Likewise. 	* config/m32r/m32r.h (DWARF_DEBUGGING_INFO): Likewise. 	* config/mcore/mcore-elf.h (DWARF_DEBUGGING_INFO): Likewise. 	* config/sparc/linux64.h (DWARF_DEBUGGING_INFO): Likewise. 	* config/sparc/liteelf.h (DWARF_DEBUGGING_INFO): Likewise. 	* config/sparc/sol26-sld.h (DWARF_DEBUGGING_INFO): Likewise. 	* config/sparc/sp86x-elf.h (DWARF_DEBUGGING_INFO): Likewise. 	* doc/invoke.texi: Do not mention -gdwarf, -gdwarf-1, -gdwarf-1+, 	or -gdwarf+. 	* doc/tm.texi: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@74996 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -852,7 +852,7 @@ OBJS-common = \
  cfgloopanal.o cfgloopmanip.o loop-init.o loop-unswitch.o loop-unroll.o	   \
  cfgrtl.o combine.o conflict.o convert.o coverage.o cse.o cselib.o 	   \
  dbxout.o debug.o df.o diagnostic.o dojump.o doloop.o dominance.o	   \
- dwarf2asm.o dwarf2out.o dwarfout.o emit-rtl.o except.o explow.o	   \
+ dwarf2asm.o dwarf2out.o emit-rtl.o except.o explow.o	                   \
  expmed.o expr.o final.o flow.o fold-const.o function.o gcse.o		   \
  genrtl.o ggc-common.o global.o graph.o gtype-desc.o			   \
  haifa-sched.o hooks.o ifcvt.o insn-attrtab.o insn-emit.o insn-modes.o	   \
@@ -1604,9 +1604,6 @@ sdbout.o : sdbout.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(TREE_H) $(RTL_
    flags.h function.h $(EXPR_H) output.h hard-reg-set.h $(REGS_H) real.h \
    insn-config.h xcoffout.h c-pragma.h $(GGC_H) $(TARGET_H) \
    sdbout.h toplev.h $(TM_P_H) except.h debug.h langhooks.h gt-sdbout.h
-dwarfout.o : dwarfout.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(TREE_H) \
-   $(RTL_H) dwarf.h flags.h insn-config.h reload.h output.h toplev.h $(TM_P_H) \
-   debug.h langhooks.h $(TARGET_H)
 dwarf2out.o : dwarf2out.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(TREE_H) \
    $(RTL_H) dwarf2.h debug.h flags.h insn-config.h reload.h output.h $(DIAGNOSTIC_H) real.h \
    hard-reg-set.h $(REGS_H) $(EXPR_H) libfuncs.h toplev.h dwarf2out.h varray.h \
