--- a/tree-ssa-20020619-branch/gcc/Makefile.in
+++ b/tree-ssa-20020619-branch/gcc/Makefile.in
@@ -1544,10 +1544,10 @@ tree-alias-type.o: tree-alias-type.c tree-alias-type.h $(SYSTEM_H) $(CONFIG_H) \
    $(GGC_H) $(TM_H) coretypes.h $(VARRAY_H)
 tree-alias-ander.o: tree-alias-ander.c tree-alias-ander.h $(SYSTEM_H) \
    $(CONFIG_H) $(GGC_H) $(TREE_H) $(TREE_FLOW_H) tree-alias-common.h \
-   $(TM_H) coretypes.h
+   $(TM_H) coretypes.h cgraph.h
 tree-alias-common.o: tree-alias-common.c tree-alias-common.h $(SYSTEM_H) \
    $(CONFIG_H) $(GGC_H) $(TREE_H) gt-tree-alias-common.h $(TREE_FLOW_H) \
-   $(TM_H) coretypes.h
+   $(TM_H) coretypes.h cgraph.h
 tree-ssa.o : tree-ssa.c $(TREE_FLOW_H) $(CONFIG_H) $(SYSTEM_H) \
    $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) $(GGC_H) output.h diagnostic.h \
    errors.h toplev.h function.h $(TIMEVAR_H) tree-alias-common.h \
