* configure.ac: Use AC_PROG_CPP_WERROR. 	* configure: Regenerate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75411 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.ac
+++ b/gcc/configure.ac
@@ -1,7 +1,7 @@
-# configure.in for GCC
+# configure.ac for GCC
 # Process this file with autoconf to generate a configuration script.
 
-# Copyright 1997, 1998, 1999, 2000, 2001, 2002, 2003
+# Copyright 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004
 # Free Software Foundation, Inc.
 
 #This file is part of GCC.
@@ -684,6 +684,10 @@ AC_MSG_RESULT($gcc_cv_glibc)
 if test $gcc_cv_glibc = yes; then
   AC_DEFINE(_GNU_SOURCE, 1, [Always define this when using the GNU C Library])
 fi
+
+# Need to reject headers which give warnings, so that the -Werror bootstrap
+# works later. *sigh*  This needs to come before all header checks.
+AC_PROG_CPP_WERROR
 
 AC_HEADER_STDC
 AC_HEADER_TIME
