--- a/gcc/ada/Make-lang.in
+++ b/gcc/ada/Make-lang.in
@@ -1,6 +1,6 @@
 # Top level -*- makefile -*- fragment for GNU Ada (GNAT).
-#   Copyright (C) 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003
-#   Free Software Foundation, Inc.
+#   Copyright (C) 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002,
+#   2003, 2004 Free Software Foundation, Inc.
 
 #This file is part of GCC.
 
@@ -441,49 +441,40 @@ ada.generated-manpages:
 
 # Generate documentation.
 #
-# The generated Texinfo files for the User Guide are stored in
-# $(srcdir).  However, if the documentation files depended on
-# executables in the build tree, there'd be no way to ship a source
-# tree with the documentation already generated such that `make'
-# wouldn't attempt to rebuild it.  So, we punt and arrange for the
-# documentation files to depend on a stamp file which has the
-# combined dependencies of the texi files and the generatator file.
-# This stamp file calls a submake to build the executable.
+# The generated Texinfo files for the User Guide are stored in $(srcdir).
+#
+# ??? There is some ugliness here in that the aforementioned generated
+# documentation files depend on executables in the build tree.  Since the
+# source directory is supposed to be read only it is difficult to ship a source
+# tree with the documentation already generated such that "make" will not
+# attempt to rebuild them.
 # 
-# If gnu make 3.80 is ever made a requirement to build, then
-# this dance could be avoided using an order-only dependency:
+# If gnu make 3.80 is ever made a requirement to build, then this could be
+# avoided using an order-only dependency:
 #
 # $(srcdir)/ada/gnat_ug_unx.texi: \
 #     ada/gnat_ug.texi ada/ug_words | ada/doctools/xgnatug$(build_exeext)
-
-$(srcdir)/ada/stamp-xgnatug: ada/xgnatug.adb ada/gnat_ug.texi ada/ug_words
-	$(MAKE) ada/doctools/xgnatug$(build_exeext) 
-	$(STAMP) $(srcdir)/ada/stamp-xgnatug
 
 ada/doctools/xgnatug$(build_exeext): ada/xgnatug.adb
 	-$(MKDIR) ada/doctools
 	cp $^ ada/doctools
 	cd ada/doctools && gnatmake -q xgnatug
 
-$(srcdir)/ada/gnat_ug_unx.texi: $(srcdir)/ada/stamp-xgnatug
-	ada/doctools/xgnatug unx $(srcdir)/ada/gnat_ug.texi \
-	  $(srcdir)/ada/ug_words \
-	  $(srcdir)/ada/gnat_ug_unx.texi
+$(srcdir)/ada/gnat_ug_unx.texi : ada/doctools/xgnatug$(build_exeext) \
+	$(srcdir)/ada/gnat_ug.texi $(srcdir)/ada/ug_words
+	ada/doctools/xgnatug unx $(srcdir)/ada/gnat_ug.texi $(srcdir)/ada/ug_words $(srcdir)/ada/gnat_ug_unx.texi
 
-$(srcdir)/ada/gnat_ug_vms.texi: $(srcdir)/ada/stamp-xgnatug
-	ada/doctools/xgnatug vms $(srcdir)/ada/gnat_ug.texi \
- 	  $(srcdir)/ada/ug_words \
-	  $(srcdir)/ada/gnat_ug_vms.texi
+$(srcdir)/ada/gnat_ug_vms.texi : ada/doctools/xgnatug$(build_exeext) \
+	$(srcdir)/ada/gnat_ug.texi $(srcdir)/ada/ug_words
+	ada/doctools/xgnatug vms $(srcdir)/ada/gnat_ug.texi $(srcdir)/ada/ug_words $(srcdir)/ada/gnat_ug_vms.texi
 
-$(srcdir)/ada/gnat_ug_vxw.texi: $(srcdir)/ada/stamp-xgnatug
-	ada/doctools/xgnatug vxworks $(srcdir)/ada/gnat_ug.texi \
- 	  $(srcdir)/ada/ug_words \
-	  $(srcdir)/ada/gnat_ug_vxw.texi
+$(srcdir)/ada/gnat_ug_vxw.texi : ada/doctools/xgnatug$(build_exeext) \
+	$(srcdir)/ada/gnat_ug.texi $(srcdir)/ada/ug_words
+	ada/doctools/xgnatug vxworks $(srcdir)/ada/gnat_ug.texi $(srcdir)/ada/ug_words $(srcdir)/ada/gnat_ug_vxw.texi
 
-$(srcdir)/ada/gnat_ug_wnt.texi: $(srcdir)/ada/stamp-xgnatug
-	ada/doctools/xgnatug wnt $(srcdir)/ada/gnat_ug.texi \
-	  $(srcdir)/ada/ug_words \
-	  $(srcdir)/ada/gnat_ug_wnt.texi
+$(srcdir)/ada/gnat_ug_wnt.texi : ada/doctools/xgnatug$(build_exeext) \
+	$(srcdir)/ada/gnat_ug.texi $(srcdir)/ada/ug_words
+	ada/doctools/xgnatug wnt $(srcdir)/ada/gnat_ug.texi $(srcdir)/ada/ug_words $(srcdir)/ada/gnat_ug_wnt.texi
 
 $(docobjdir)/gnat_ug_unx.info : $(srcdir)/ada/gnat_ug_unx.texi \
 	$(srcdir)/doc/include/fdl.texi $(srcdir)/doc/include/gcc-common.texi \
